# rng_engine

./: .env  .gitignore  Cargo.toml  README.md  database.db
.sqlx/: query-142db5bd37784f9bf527e68de20fc7feb389f6941e6cfc1d7e7d47d41838b448.json  query-33f56507e6b42e967c357512909cc0c49906484c5e4a001e88ec780b8b154dea.json  query-668cf4cd740f02e8a667c9190c7b85395d728bd75ab471ec37b20f8e540b76db.json  query-8f5fc6876a9e051c57e3bdfebe43efa2520c86f6c4c0ef20b9ced9c92e42f8fc.json
crates/client/: Cargo.toml
crates/client/src/: main.rs
crates/core/: Cargo.toml
crates/core/src/: base_rng.rs  calibration.rs  config.rs  db.rs  lib.rs  rng_engine.rs
crates/core/src/calibration_strategy/: avg_calibration.rs  med_calibration.rs  mod.rs  outlier_calibration.rs  strategy_manager.rs
crates/server/: Cargo.toml  config.toml
crates/server/src/: main.rs
migrations/: 20241101161738_create_rng_table.sql  20241102100404_update_rng_table.sql
